[package]
name = "kvserver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.8" # 处理 protobuf 的代码
tracing = "0.1" # 日志处理
thiserror = "1"
dashmap = "5"
http = "0.2"
sled = "0.34" # storage
tempfile = "3" # 处理临时目录和文件
flate2 = "1"    # gzip 压缩
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"]}
tokio-rustls = "0.22"
webpki-roots = "0.22"
rustls-native-certs = "0.6"
snow = "0.9"
lazy_static = "1.4"
anyhow = "1" # 错误处理

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.2.1" # 支持吧 protobuf 封装成 tcp frame
futures = "0.3" # 提供 Stream trait
tracing-subscriber = "0.2" # 日志处理
tokio-util = { version = "0.6", features = ["codec"] }
certify = "0.3"

[build-dependencies]
prost-build = "0.8"