[package]
name = "p2p_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
futures = "0.3"
libp2p = { version = "0.39",  features = ["tcp-tokio"] }
tokio = { version = "*", features = ["full"]}