[package]
name = "queryer"
version = "0.1.0"
edition = "2021"
authors = ["haokr"]

[[example]]
name = "dialect"

[dependencies]
anyhow = "1"    # 错误处理
async-trait = "0.1"     # 允许 trait 里有 async fn
sqlparser = { version = "0.10" }    # sql 解析器
polars = { version = "0.15", features = ["json", "lazy"]}   # DataFrame 库
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] } # http 客户端
tokio = { version = "1", features = ["fs"]} # 异步文件处理
tracing = "0.1"     # 日志处理

[dev-dependencies]
tracing-subscriber = "0.2"  # 日志处理
tokio = { version = "1", features = ["full"]}
